--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,9 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Emofelix - Emotional AI Companions</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <div id="root"></div>
+    <!-- Container (optional) if we decide to render Google's default button -->
+    <div id="google_button_container" style="display:none;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
